@@ -8,8 +8,10 @@
   \bold{experimental}, and is bound to change.  Use at your own risk!
 }
 \usage{
-lm.fit.sparse(x, y, w, offset = NULL, method = c("qr", "cholesky"), tol = 1e-07,
-              singular.ok = TRUE, order = NULL, transpose = FALSE)
+lm.fit.sparse(x, y, w = NULL, offset = NULL,
+              method = c("qr", "cholesky"),
+              tol = 1e-7, singular.ok = TRUE, order = NULL,
+              transpose = FALSE)
 }
 \arguments{
   \item{x}{\emph{sparse} design matrix of dimension \code{n * p}, i.e.,
@@ -41,7 +43,7 @@ lm.fit.sparse(x, y, w, offset = NULL, method = c("qr", "cholesky"), tol = 1e-07,
     \code{3} is the default.}
   \item{transpose}{
     logical; if true, use the transposed matrix \code{t(x)} instead of
-    code{x}.
+    \code{x}.
   }
 }
 % \details{
@@ -57,7 +59,6 @@ lm.fit.sparse(x, y, w, offset = NULL, method = c("qr", "cholesky"), tol = 1e-07,
     \R's package \pkg{stats}: \code{\link{lm.fit}()}.
 }
 \examples{
-
 dd <- expand.grid(a = as.factor(1:3),
                   b = as.factor(1:4),
                   c = as.factor(1:2),
@@ -72,9 +73,10 @@ dM <- within(dM, { A <- c(2,5,10)[a]
                    C <- c(-8,8)[c]
                    D <- c(10*(-5:-2), 20*c(0, 3:5))[d]
    Y <- A + B + A*B + C + D + A*D + C*x + rnorm(n)/10
+   wts <- sample(1:10, n, replace=TRUE)
    rm(A,B,C,D)
 })
-str(dM) # 1870 x 6
+str(dM) # 1870 x 7
 
 X <- sparse.model.matrix( ~ (a+b+c+d)^2 + c*x, data = dM)
 dim(X) # 1870 x 69
@@ -86,10 +88,20 @@ Xd <- as(X,"matrix")
 system.time(fmDense <- lm.fit(Xd, y = dM[,"Y"]))
 system.time( r1 <- Matrix:::lm.fit.sparse(X, y = dM[,"Y"]) ) # *is* faster
 stopifnot(all.equal(r1, unname(fmDense$coeff), tol = 1e-12))
-
-system.time( r2 <- Matrix:::lm.fit.sparse(X, y = dM[,"Y"],
-                           method = "chol", transpose=TRUE) )
-stopifnot(all.equal(r1, r2, tol = 1e-12))
+system.time(
+     r2 <- Matrix:::lm.fit.sparse(X, y = dM[,"Y"], method = "chol") )
+stopifnot(all.equal(r1, r2$coef, tol = 1e-12),
+          all.equal(fmDense$residuals, r2$residuals, tol=1e-9)
+         )
+## with weights:
+system.time(fmD.w <- with(dM, lm.wfit(Xd, Y, w = wts)))
+system.time(fm.w1 <- with(dM, Matrix:::lm.fit.sparse(X, Y, w = wts)))
+system.time(fm.w2 <- with(dM, Matrix:::lm.fit.sparse(X, Y, w = wts,
+                                                     method = "chol") ))
+stopifnot(all.equal(fm.w1, unname(fmD.w$coeff), tol = 1e-12),
+          all.equal(fm.w2$coef, fm.w1, tol = 1e-12),
+          all.equal(fmD.w$residuals, fm.w2$residuals, tol=1e-9)
+          )
 }
 \keyword{regression}
 \keyword{array}
